fixed slidermenu bugg on small screens

--- a/content/css/core.css
+++ b/content/css/core.css
@@ -1265,7 +1265,9 @@ p#achievementDescription{
 @media screen and (max-width: 800px) {
 
 
-
+    .slider-menu{
+        position: fixed;
+    }
 
     #page,
     #page-login{
